# adventofcode-hs-2022

./: .gitignore  README.md  adventofcode.cabal  fetch.sh  mkday.rb
lib/AdventOfCode/: Search.hs  Split.hs
