cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2022
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsearch
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  build-depends:   base, containers

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_calorie_counting
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit
  main-is:       01_calorie_counting.hs

executable 02_rock_paper_scissors
  import: bin, flags
  build-depends: base, adventofcode2022
  main-is:       02_rock_paper_scissors.hs

executable 03_rucksack_reorganisation
  import: bin, flags
  build-depends: base, adventofcode2022, containers
  main-is:       03_rucksack_reorganisation.hs

executable 04_camp_cleanup
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit
  main-is:       04_camp_cleanup.hs

executable 05_supply_stacks
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit, containers
  main-is:       05_supply_stacks.hs

executable 06_tuning_trouble
  import: bin, flags
  build-depends: base, adventofcode2022
  main-is:       06_tuning_trouble.hs

executable 07_no_space_left_on_device
  import: bin, flags
  build-depends: base, adventofcode2022, containers
  main-is:       07_no_space_left_on_device.hs

executable 08_treetop_tree_house
  import: bin, flags
  build-depends: base, adventofcode2022, array
  main-is:       08_treetop_tree_house.hs

executable 09_rope_bridge
  import: bin, flags
  build-depends: base, adventofcode2022, containers
  main-is:       09_rope_bridge.hs

executable 10_cathode_ray_tube
  import: bin, flags
  build-depends: base, adventofcode2022
  main-is:       10_cathode_ray_tube.hs

executable 11_monkey_in_the_middle
  import: bin, flags
  -- keeping array in to easily swap to itemwise
  build-depends: base, adventofcode2022, aocsplit, array, containers
  main-is:       11_monkey_in_the_middle.hs

executable 12_hill_climbing_algorithm
  import: bin, flags
  -- !? added in array 0.5.6.0
  build-depends: base, adventofcode2022, aocsearch, array >= 0.5.6.0
  main-is:       12_hill_climbing_algorithm.hs

executable 13_distress_signal
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit
  main-is:       13_distress_signal.hs

executable 14_regolith_reservoir
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit, containers, mtl
  main-is:       14_regolith_reservoir.hs

executable 15_beacon_exclusion_zone
  import: bin, flags
  build-depends: base, adventofcode2022, containers
  main-is:       15_beacon_exclusion_zone.hs

executable 16_proboscidea_volcanium
  import: bin, flags
  build-depends: base, adventofcode2022, aocsearch, array, containers
  main-is:       16_proboscidea_volcanium.hs

executable 17_pyroclastic_flow
  import: bin, flags
  build-depends: base, adventofcode2022, containers, mtl
  main-is:       17_pyroclastic_flow.hs

executable 18_boiling_boulders
  import: bin, flags
  build-depends: base, adventofcode2022, aocsearch, aocsplit, containers
  main-is:       18_boiling_boulders.hs

executable 19_not_enough_minerals
  import: bin, flags
  build-depends: base, adventofcode2022, containers, mtl
  main-is:       19_not_enough_minerals.hs

executable 20_grove_positioning_system
  import: bin, flags
  build-depends: base, adventofcode2022, array, containers
  -- keeping containers in to easily swap to Seq
  main-is:       20_grove_positioning_system.hs

executable 21_monkey_math
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit, containers
  main-is:       21_monkey_math.hs

executable 22_monkey_map
  import: bin, flags
  build-depends: base, adventofcode2022, aocsplit, containers
  main-is:       22_monkey_map.hs

executable 23_unstable_diffusion
  import: bin, flags
  -- modifyArray added in array 0.5.6.0
  -- keeping containers in to easily swap to Map
  build-depends: base, adventofcode2022, array >= 0.5.6.0, containers
  main-is:       23_unstable_diffusion.hs

executable 24_blizzard_basin
  import: bin, flags
  build-depends: base, adventofcode2022, array
  main-is:       24_blizzard_basin.hs

executable 25_full_of_hot_air
  import: bin, flags
  build-depends: base, adventofcode2022
  main-is:       25_full_of_hot_air.hs
